assets/section-homepage-ingredients.css
	#ingredient-row .row{
	Width: 100%;
	overflow-x: hidden;
}

.list-ingredients{
	padding: 10px;
	color: #000000;
	font-size: 17px;
	line-height: 1;
	font-weight: 500;
	width: 100%;
}
 
.ingredient-image-container {
	width: 30%;
}

.list-ingredients .upk-featured-list-title-ingredients {
	margin: 0;
	font-size: 25px;
	font-weight: 700;
}
 
h1{
  font-size: 50px;
}

#ingredient-row{
	display: flex;
	margin-top: 60px;
}


.btn-ingredients {
	box-sizing: border-box;
	appearance: none;
	background-color: transparent;
	cursor: pointer;
	display: flex;
	align-self: center;
	font-size: 1rem;
	font-weight: 400;
	line-height: 1;
	margin: 20px;
	padding: 1.2em 2.8em;
	text-decoration: none;
	text-align: center;
	font-weight: 700;
}

.fifth-ingredients {
	border-color: #000000;
	border-radius: 0;
	color: #000000;
	position: relative;
	overflow: hidden;
	z-index: 1;
	margin: auto;

}

